--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
@@ -110,7 +111,7 @@
         android:id="@+id/donateImgBtn"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="#f8ef6b"
         android:scaleType="centerInside"
         android:src="@drawable/donatefinal"
@@ -118,6 +119,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categories" />
+    <Button
+        android:id="@+id/verifyBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@color/colorBlack"
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@+id/donateImgBtn"
+
+        android:text="Verify Ads" />
+
 
 <!--
     <GridLayout
@@ -296,6 +307,8 @@
             app:layout_anchor="@id/bottomAppBar"
             app:layout_anchorGravity="center"
             app:tint="#ffffff" />
+
+
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
