--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#494444</item>
-        <item name="colorPrimaryDark">#000000</item>
+        <item name="colorPrimaryDark">#1D1D1E</item>
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="textAppearanceHeadline1">@style/TextAppearance.MaterialComponents.Headline1</item>
