--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1F1D22</color>
-    <color name="colorPrimaryDark">#454242</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#494444</color>
+    <color name="colorPrimaryDark">#212222</color>
+    <color name="colorAccent">#00adb5</color>
     <color name="colorBlack">#000000</color>
 
 </resources>
