--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -8,7 +8,8 @@
         android:width="2dp"
         />
     <corners android:radius="20dp" />
-    <solid android:color="@android:color/holo_blue_bright" />
+    <solid android:color="#0096bb"/>
+    <!--<solid android:color="@android:color/holo_blue_bright" />-->
 
 
 
