--- a/app/src/main/res/layout/activity_list_ad.xml
+++ b/app/src/main/res/layout/activity_list_ad.xml
@@ -15,7 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/backgroundapp"
+        android:background="#FAF8F8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top">
