--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -9,189 +9,198 @@
     app:cardElevation="3dp"
     app:cardUseCompatPadding="true">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="2dp">
+        android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/adDeleteBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:elevation="2dp"
-            android:src="@drawable/ic_delete_black_24dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/soldOut"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="2dp"
-            android:gravity="center"
-            android:text="SOLD OUT"
-            android:fontFamily="@font/berkshire_swash"
-            android:textColor="#F85959"
-            android:textSize="50sp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <TextView
-            android:id="@+id/verified"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="2dp"
-            android:gravity="center"
-            android:text="Verification in Progress"
-            android:fontFamily="@font/berkshire_swash"
-            android:textColor="#F85959"
-            android:textSize="30sp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/adSoldBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:elevation="2dp"
-            android:src="@drawable/ic_sold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <LinearLayout
-            android:id="@+id/linearLayout4"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:padding="2dp">
 
-
-            <ImageView
-                android:id="@+id/adImageView"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                android:layout_margin="2dp"
-                android:layout_weight="0"
-                app:layout_constraintEnd_toEndOf="parent"
+            <ImageButton
+                android:id="@+id/adDeleteBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:elevation="2dp"
+                android:visibility="invisible"
+                android:src="@drawable/ic_delete_black_24dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/soldOut"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingHorizontal="12dp">
+                android:elevation="2dp"
+                android:gravity="center"
+                android:text="SOLD OUT"
+                android:fontFamily="@font/berkshire_swash"
+                android:textColor="#F85959"
+                android:textSize="50sp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/verified"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Verification in Progress"
+                android:fontFamily="@font/berkshire_swash"
+                android:textColor="#0B2FEA"
+                android:textSize="13sp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
+                app:layout_constraintEnd_toEndOf="parent"                 />
 
-                <TextView
-                    android:id="@+id/AdProdModel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="start"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:text="Model"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
+            <ImageButton
+                android:id="@+id/adSoldBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:elevation="2dp"
+                android:visibility="invisible"
+                android:src="@drawable/ic_sold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <LinearLayout
+                android:id="@+id/linearLayout4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+                <ImageView
+                    android:id="@+id/adImageView"
+                    android:layout_width="180dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="2dp"
+                    android:layout_weight="0"
+                    android:background="@color/shimmer"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/adImageView" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
 
-                <TextView
-                    android:id="@+id/AdProdBrand"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="start"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:text="Brand"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/adImageView" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:orientation="horizontal">
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="12dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="fill"
-                        android:layout_weight="0"
-                        android:gravity="center"
-                        android:text="Rs. "
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:id="@+id/AdProdPrice"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/AdProdModel"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_marginTop="8dp"
+                        android:gravity="start"
                         android:maxLines="1"
                         android:ellipsize="end"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:background="@color/shimmer"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/adImageView" />
+
+                    <TextView
+                        android:id="@+id/AdProdBrand"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
                         android:gravity="start"
-                        android:text="9999"
-                        android:textSize="30sp" />
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:textSize="18sp"
+                        android:background="@color/shimmer"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/adImageView" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="fill"
+                            android:layout_weight="0"
+                            android:gravity="center"
+                            android:text="Rs."
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/AdProdPrice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:maxLines="1"
+                            android:background="@color/shimmer"
+                            android:ellipsize="end"
+                            android:gravity="start"
+                            android:textSize="30sp" />
+
+                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/AdProdId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_gravity="end"
+                        android:layout_weight="1"
+                        android:visibility="invisible"
+                        android:textSize="10sp"
+                        android:text=""
+                        />
+                    <TextView
+                        android:id="@+id/adType"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_gravity="end"
+                        android:layout_weight="1"
+                        android:visibility="invisible"
+                        android:textSize="10sp"
+                        android:text=""
+                        />
+                    <TextView
+                        android:id="@+id/uadType"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_gravity="end"
+                        android:layout_weight="1"
+                        android:visibility="invisible"
+                        android:textSize="10sp"
+                        android:text=""
+                        />
+
 
                 </LinearLayout>
-                <TextView
-                    android:id="@+id/AdProdId"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_gravity="end"
-                    android:layout_weight="1"
-                    android:visibility="invisible"
-                    android:textSize="10sp"
-                    android:text=""
-                    />
-                <TextView
-                    android:id="@+id/adType"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_gravity="end"
-                    android:layout_weight="1"
-                    android:visibility="invisible"
-                    android:textSize="10sp"
-                    android:text=""
-                    />
-                <TextView
-                    android:id="@+id/uadType"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_gravity="end"
-                    android:layout_weight="1"
-                    android:visibility="invisible"
-                    android:textSize="10sp"
-                    android:text=""
-                    />
 
 
             </LinearLayout>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </androidx.cardview.widget.CardView>
