--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#494444</color>
-    <color name="colorPrimaryDark">#212222</color>
-    <color name="colorAccent">#00adb5</color>
+    <color name="colorPrimary">#333C45</color>
+    <color name="colorPrimaryDark">#929393</color>
+    <color name="colorAccentt">#00adb5</color>
+    <color name="colorAccent">#03C3EA</color>
     <color name="colorBlack">#000000</color>
-
+    <color name="shimmer">#CCCcCc</color>
+    <color name="backgrnd">#39F8F1E4</color>
 </resources>
