--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -11,6 +11,7 @@
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_layout"
+        app:shimmer_auto_start="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
