--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -15,6 +15,7 @@
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_verify"
+        android:iconTint="@color/colorBlack"
         android:orderInCategory="100"
         android:icon="@drawable/ic_verify"
         android:title="Verify Ads"
