--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundapp"
+    android:background="#d7ccb6"
     tools:context=".auth.SignupActivity">
+
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/manitlogo"
         android:padding="20dp"
-        android:alpha="0.3"/>
+        android:alpha="0.05"/>
 
     <TextView
         android:id="@+id/textView"
@@ -21,7 +22,7 @@
         android:layout_marginTop="64dp"
         android:text="SignUp Form"
         android:fontFamily="@font/lora_regular"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -35,8 +36,8 @@
         android:layout_height="75dp"
         android:layout_marginTop="36dp"
         android:hint="Name"
-        android:textColorHint="#ffffff"
-        app:boxStrokeColor="@color/colorPrimaryDark"
+        android:textColorHint="#000000"
+        app:boxStrokeColor="#161616"
         app:boxStrokeWidth="2dp"
         app:boxStrokeWidthFocused="3dp"
         app:hintTextColor="#ffffff"
@@ -51,7 +52,7 @@
             android:fontFamily="@font/lora_regular"
             android:inputType="textPersonName|textCapWords"
             android:textCursorDrawable="@null"
-            android:textColor="#f9ed69" />
+            android:textColor="#000000" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -61,8 +62,8 @@
         android:layout_height="75dp"
         android:layout_marginTop="5dp"
         android:hint="@string/Email"
-        android:textColorHint="#ffffff"
-        app:boxStrokeColor="@color/colorPrimaryDark"
+        android:textColorHint="#000000"
+        app:boxStrokeColor="#161616"
         app:boxStrokeWidth="2dp"
         app:boxStrokeWidthFocused="3dp"
         app:hintTextColor="#ffffff"
@@ -77,7 +78,7 @@
             android:fontFamily="@font/lora_regular"
             android:inputType="textEmailAddress"
             android:textCursorDrawable="@null"
-            android:textColor="#f9ed69" />
+            android:textColor="#000000" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -87,8 +88,8 @@
         android:layout_height="75dp"
         android:layout_marginTop="5dp"
         android:hint="@string/Password"
-        android:textColorHint="#ffffff"
-        app:boxStrokeColor="@color/colorPrimaryDark"
+        android:textColorHint="#000000"
+        app:boxStrokeColor="#161616"
         app:boxStrokeWidth="2dp"
         app:boxStrokeWidthFocused="3dp"
         app:hintTextColor="#ffffff"
@@ -103,7 +104,7 @@
             android:fontFamily="@font/lora_regular"
             android:inputType="textPassword"
             android:textCursorDrawable="@null"
-            android:textColor="#f9ed69" />
+            android:textColor="#000000" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -113,8 +114,8 @@
         android:layout_height="75dp"
         android:layout_marginTop="5dp"
         android:hint="Confirm Password"
-        android:textColorHint="#ffffff"
-        app:boxStrokeColor="@color/colorPrimaryDark"
+        android:textColorHint="#000000"
+        app:boxStrokeColor="#161616"
         app:boxStrokeWidth="2dp"
         app:boxStrokeWidthFocused="3dp"
         app:hintTextColor="#ffffff"
@@ -129,7 +130,7 @@
             android:fontFamily="@font/lora_regular"
             android:inputType="textPassword"
             android:textCursorDrawable="@null"
-            android:textColor="#f9ed69" />
+            android:textColor="#000000" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
