--- a/app/src/main/res/layout/activity_verify_ad.xml
+++ b/app/src/main/res/layout/activity_verify_ad.xml
@@ -24,7 +24,7 @@
             android:id="@+id/noAdsTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No Ads to Dispaly"
+            android:text="No Ads to Display"
             android:textColor="#000000"
             android:textSize="25sp"
             android:visibility="invisible"
