--- a/app/src/main/res/layout/bottom_app_bar.xml
+++ b/app/src/main/res/layout/bottom_app_bar.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:layout_gravity="bottom"
         android:backgroundTint="@color/colorPrimary"
         android:paddingBottom="5dp">
