--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,12 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="55dp"
-        app:layout_constraintBottom_toTopOf="@id/donateImgBtn"
+        android:layout_marginBottom="135dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -59,8 +59,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill"
                     android:src="@drawable/eleee"
-                    app:civ_border_overlay="true"
                     app:civ_border_color="#6C6C6C"
+                    app:civ_border_overlay="true"
                     app:civ_border_width="4dp" />
 
                 <TextView
@@ -131,7 +131,7 @@
 
 
 
-    <ImageButton
+   <!-- <ImageButton
         android:id="@+id/donateImgBtn"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -144,7 +144,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/categories" />
+        app:layout_constraintTop_toBottomOf="@id/categories" />-->
 
 
 
